--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:paddingVertical="24dp"
         android:text="@string/connect"
         app:layout_constraintBottom_toTopOf="@+id/mainActivityMbQueryAll"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:paddingVertical="24dp"
         android:text="@string/queryAll"
         app:layout_constraintBottom_toTopOf="@+id/mainActivityMbInsert"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,6 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:paddingVertical="24dp"
         android:text="@string/insert"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
